[package]
name = "iron-login"
version = "0.5.0"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["iron", "sessions", "cookies"]
readme = "README.md"

description = "Basic session management in Iron."
repository = "https://github.com/untitaker/iron-login"
homepage = "https://github.com/untitaker/iron-login"

[dependencies]
iron = "0.4"
oven = { git = "https://github.com/uniphil/oven" }
persistent = "0.2"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"
rev = "c9e707263f6633c8828a8eaac5e0439bff0e286e"
features = ["secure"]
